[project]
name = "atividade-am"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "lcsouza2",email = "lcsouzagarcia@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.3.3,<15.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
